# xfce4-wavelan-plugin

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  autogen.sh  configure  configure.ac  configure.ac.in  configure.in.in  meson.build
panel-plugin/: Makefile.am  Makefile.in  apple80211_ioctl.h  icons.xcf  inline-icons.h  meson.build  wavelan.c  wavelan.desktop.in  wavelan.desktop.in.in  wi.h  wi_bsd.c  wi_common.c  wi_darwin.c  wi_linux.c
po/: ChangeLog  LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  nb_NO.po  nl.po  (+22 more)
